--- a/src/scss/inner/_content.scss
+++ b/src/scss/inner/_content.scss
@@ -187,6 +187,10 @@ body {
   line-height: 26px;
   color: #5e6369;
 
+  * {
+    display: inline;
+  }
+
   &:not(.wo-product-info--expanded) {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -938,11 +942,14 @@ body {
 
   &__input-icon {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 16px;
+    top: 1px;
+    right: 1px;
     pointer-events: none;
     display: flex;
+    align-items: center;
+    height: calc(100% - 2px);
+    background-color: #fff;
+    padding: 0 14px 0 5px;
   }
 
   &__input {
